# analytics_lab_project

./: Pinterest Trends report_2026-02-20.csv  README.md  hello.py  pyproject.toml
scrape_pinterest/: pinterest_shop_the_look_scraper.py
src/trend_pipeline/: __init__.py  adapters.py  base.py  batch.py  decorators.py  example.py  models.py  pipeline.py  processors.py
tests/: test_pipeline.py
